tests/algorithms/x/Pascal/neural_network/input_data.error
compile: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/algorithms/x/Pascal/neural_network/input_data.pas
input_data.pas(190,29) Error: Incompatible types: got "DataSet.{Dynamic} Array Of IntArray" expected "{Dynamic} Array Of LongInt"
input_data.pas(191,29) Error: Incompatible types: got "DataSet.{Dynamic} Array Of IntArray" expected "{Dynamic} Array Of LongInt"
input_data.pas(193,28) Error: Incompatible types: got "DataSet.{Dynamic} Array Of IntArray" expected "{Dynamic} Array Of LongInt"
input_data.pas(194,28) Error: Incompatible types: got "DataSet.{Dynamic} Array Of IntArray" expected "{Dynamic} Array Of LongInt"
input_data.pas(198,91) Error: Incompatible type for arg no. 3: Got "{Dynamic} Array Of LongInt", expected "IntArrayArray"
input_data.pas(201,30) Error: Incompatible types: got "DataSet.{Dynamic} Array Of IntArray" expected "{Dynamic} Array Of LongInt"
input_data.pas(202,30) Error: Incompatible types: got "DataSet.{Dynamic} Array Of IntArray" expected "{Dynamic} Array Of LongInt"
input_data.pas(204,91) Error: Incompatible type for arg no. 3: Got "{Dynamic} Array Of LongInt", expected "IntArrayArray"
input_data.pas(221,39) Error: Incompatible types: got "IntArrayArray" expected "{Dynamic} Array Of LongInt"
input_data.pas(222,39) Error: Incompatible types: got "IntArrayArray" expected "{Dynamic} Array Of LongInt"
input_data.pas(223,39) Error: Incompatible types: got "IntArrayArray" expected "{Dynamic} Array Of LongInt"
input_data.pas(224,39) Error: Incompatible types: got "IntArrayArray" expected "{Dynamic} Array Of LongInt"
input_data.pas(225,105) Error: Incompatible type for arg no. 2: Got "{Dynamic} Array Of LongInt", expected "IntArrayArray"
input_data.pas(226,110) Error: Incompatible type for arg no. 2: Got "{Dynamic} Array Of LongInt", expected "IntArrayArray"
input_data.pas(272) Fatal: There were 14 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
